unpackaged/main/default/objects/Account/fields/a_Assurance_lamal__c.field-meta.xml
<CustomField>
    <fullName>a_Assurance_lamal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assurance (LAMal)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Veuillez renseigner une Assurance</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Assurance</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assurés LAMal</relationshipLabel>
    <relationshipName>Assurance</relationshipName>
    <type>Lookup</type>
</CustomField>