unpackaged/main/default/objects/Account/fields/a_Autre_provenance_de_la_demande__c.field-meta.xml
<CustomField>
    <fullName>a_Autre_provenance_de_la_demande__c</fullName>
    <label>Autre provenance de la demande</label>
    <type>TextArea</type>
</CustomField>