unpackaged/main/default/objects/Account/fields/a_Autre_type_de_logement__c.field-meta.xml
<CustomField>
    <fullName>a_Autre_type_de_logement__c</fullName>
    <label>Autre type de logement</label>
    <type>TextArea</type>
</CustomField>