unpackaged/main/default/objects/Account/fields/a_Code_dentr_dimmeuble__c.field-meta.xml
<CustomField>
    <fullName>a_Code_dentr_dimmeuble__c</fullName>
    <label>Code d&apos;entré d&apos;immeuble</label>
    <length>15</length>
    <type>Text</type>
</CustomField>