unpackaged/main/default/objects/Account/fields/a_Commentaire_medecin_specialiste__c.field-meta.xml
<CustomField>
    <fullName>a_Commentaire_medecin_specialiste__c</fullName>
    <label>Commentaire médecin spécialiste</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>