unpackaged/main/default/objects/Account/fields/a_Commentaires_medecin_traitant__c.field-meta.xml
<CustomField>
    <fullName>a_Commentaires_medecin_traitant__c</fullName>
    <label>Commentaires médecin traitant</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>