unpackaged/main/default/objects/Account/fields/a_Dossier_de_soins__c.field-meta.xml
<CustomField>
    <fullName>a_Dossier_de_soins__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier de soins</label>
    <referenceTo>Dossier_de_soins__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>