unpackaged/main/default/objects/Account/fields/a_Etage__c.field-meta.xml
<CustomField>
    <fullName>a_Etage__c</fullName>
    <label>Etage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>