unpackaged/main/default/objects/Account/fields/a_Etat_civil__c.field-meta.xml
<CustomField>
    <fullName>a_Etat_civil__c</fullName>
    <label>Etat civil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Célibataire</fullName>
            </value>
            <value>
                <fullName>Marié(e)</fullName>
            </value>
            <value>
                <fullName>Divorcé(e)</fullName>
            </value>
            <value>
                <fullName>Partenariat enregistré</fullName>
            </value>
            <value>
                <fullName>Partenariat enregistré dissous</fullName>
            </value>
            <value>
                <fullName>Veuve/Veuf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>