unpackaged/main/default/objects/Account/fields/a_Infirmire_referente__c.field-meta.xml
<CustomField>
    <fullName>a_Infirmire_referente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Infirmière référente</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>ServiceResource</relationshipName>
    <type>Lookup</type>
</CustomField>