unpackaged/main/default/objects/Account/fields/a_logement_remarques__c.field-meta.xml
<CustomField>
    <fullName>a_logement_remarques__c</fullName>
    <label>Logement - remarques</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>