unpackaged/main/default/objects/Account/fields/a_Medecin_specialiste__c.field-meta.xml
<CustomField>
    <fullName>a_Medecin_specialiste__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Médecin spécialiste</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Médecin spécialiste du</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>