unpackaged/main/default/objects/Account/fields/a_Medecin_traitant2__c.field-meta.xml
<CustomField>
    <fullName>a_Medecin_traitant2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Médecin traitant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Médecin traitant du</relationshipLabel>
    <relationshipName>TestRichard</relationshipName>
    <type>Lookup</type>
</CustomField>