unpackaged/main/default/objects/Account/fields/a_Numero_assure_LAMal__c.field-meta.xml
<CustomField>
    <fullName>a_Numero_assure_LAMal__c</fullName>
    <label>Numéro d&apos;assuré (LAMal)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>