unpackaged/main/default/objects/Account/fields/a_Pharmacie__c.field-meta.xml
<CustomField>
    <fullName>a_Pharmacie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pharmacie</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Pharmacie</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pharmacie principale du</relationshipLabel>
    <relationshipName>Pharmacie</relationshipName>
    <type>Lookup</type>
</CustomField>