unpackaged/main/default/objects/Account/fields/a_Planning_par_courier__c.field-meta.xml
<CustomField>
    <fullName>a_Planning_par_courier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Planning par courier</label>
    <type>Checkbox</type>
</CustomField>