unpackaged/main/default/objects/Account/fields/a_Provenance_de_la_demande__c.field-meta.xml
<CustomField>
    <fullName>a_Provenance_de_la_demande__c</fullName>
    <label>Provenance de la demande</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Entourage</fullName>
            </value>
            <value>
                <fullName>Médecin traitant</fullName>
            </value>
            <value>
                <fullName>Hôpital/Clinique</fullName>
            </value>
            <value>
                <fullName>Fondation les Eglantines</fullName>
            </value>
            <value>
                <fullName>EMS</fullName>
            </value>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>Curateur</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>