unpackaged/main/default/objects/Account/fields/a_Service_social__c.field-meta.xml
<CustomField>
    <fullName>a_Service_social__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service social</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Service social / Curatelle</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service social pour</relationshipLabel>
    <relationshipName>ServiceSocial</relationshipName>
    <type>Lookup</type>
</CustomField>