unpackaged/main/default/objects/Account/fields/a_Sexe__c.field-meta.xml
<CustomField>
    <fullName>a_Sexe__c</fullName>
    <label>Sexe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Femme</fullName>
            </value>
            <value>
                <fullName>Homme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>