unpackaged/main/default/objects/Account/fields/a_situation_du_logement__c.field-meta.xml
<CustomField>
    <fullName>a_situation_du_logement__c</fullName>
    <label>Situation du logement / Animaux</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>