unpackaged/main/default/objects/Account/fields/a_Situation_sociale__c.field-meta.xml
<CustomField>
    <fullName>a_Situation_sociale__c</fullName>
    <label>Situation sociale</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>AVS</fullName>
            </value>
            <value>
                <fullName>API - degré faible</fullName>
            </value>
            <value>
                <fullName>API - degré moyen</fullName>
            </value>
            <value>
                <fullName>API - degré Grave</fullName>
            </value>
            <value>
                <fullName>API - en cours</fullName>
            </value>
            <value>
                <fullName>Curatelle</fullName>
            </value>
            <value>
                <fullName>Subvention de l&apos;assurance maladie</fullName>
            </value>
            <value>
                <fullName>Contribution d&apos;assistance (AI)</fullName>
            </value>
            <value>
                <fullName>Suivi par un service social</fullName>
            </value>
            <value>
                <fullName>API - en cours, degr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>