unpackaged/main/default/objects/Account/fields/a_Type_de_logement__c.field-meta.xml
<CustomField>
    <fullName>a_Type_de_logement__c</fullName>
    <label>Type de logement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appartement</fullName>
            </value>
            <value>
                <fullName>Appartement adapté</fullName>
            </value>
            <value>
                <fullName>Maison</fullName>
            </value>
            <value>
                <fullName>Ferme</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>