unpackaged/main/default/objects/Account/fields/AVS_number__c.field-meta.xml
<CustomField>
    <fullName>AVS_number__c</fullName>
    <label>Numéro d&apos;AVS</label>
    <type>TextArea</type>
</CustomField>