unpackaged/main/default/objects/Account/fields/Segmentation_patient_patologie__c.field-meta.xml
<CustomField>
    <fullName>Segmentation_patient_patologie__c</fullName>
    <label>Segmentation patient (patologie)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Psychiatrie</fullName>
            </value>
            <value>
                <fullName>Post opératoire</fullName>
            </value>
            <value>
                <fullName>Pathologie dégénérative</fullName>
            </value>
            <value>
                <fullName>Démence</fullName>
            </value>
            <value>
                <fullName>Oncologie</fullName>
            </value>
            <value>
                <fullName>Paralysie motrice</fullName>
            </value>
            <value>
                <fullName>Traitement IV</fullName>
            </value>
            <value>
                <fullName>Faiblesse âge</fullName>
            </value>
            <value>
                <fullName>Soins palliatifs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>