unpackaged/main/default/objects/Account/recordTypes/Business_account.recordType-meta.xml
<RecordType>
    <fullName>Business_account</fullName>
    <active>true</active>
    <label>Société</label>
</RecordType>